# fastapi-demo

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: docker.yaml  python.yaml
data/init/: 2-sakila-data.sql
manifests/: api-deployment.yaml  api-service.yaml  postgres-configmap.yaml  postgres-pvc.yaml  postgres-secrets.yaml  postgres-service.yaml  postgres-statefulset.yaml
myapi/: __init__.py  configuration.py  database.py  main.py
myapi/_migrations/: env.py
myapi/_migrations/versions/: 2fc5672004b8_create_actor_table.py
myapi/actors/: database.py  dependencies.py  models.py  queries.py  router.py  service.py
myapi/async_actors/: exceptions.py  queries.py  router.py  schemas.py  service.py
myapi/shared/: configuration.py  dependencies.py
myapi/shared/database/: async_session.py  models.py  session.py
tests/: conftest.py
tests/actors/: test_actors_database.py
